[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/components/SelectTypeStudyPopUp/components/OptionPreview/components/EnterButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H6_headline.tres" type="DynamicFont" id=2]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H4_headline.tres" type="DynamicFont" id=3]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H2_headline.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/components/SelectTypeStudyPopUp/components/OptionPreview/components/TypeOfStudy/components/DailyStudy/DailyStudy.gd" type="Script" id=5]

[node name="DailyStudy" type="VBoxContainer"]
margin_left = 24.0
margin_top = 42.0
margin_right = 476.0
margin_bottom = 306.0
custom_constants/separation = 24
alignment = 1
script = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_right = 452.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Estudio diar√≠o"
align = 1
valign = 1

[node name="CardsToDo" type="HBoxContainer" parent="."]
margin_top = 64.0
margin_right = 452.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 114 )
custom_constants/separation = 0

[node name="NewCards" type="VBoxContainer" parent="CardsToDo"]
margin_right = 220.0
margin_bottom = 114.0
rect_min_size = Vector2( 220, 0 )

[node name="Title" type="Label" parent="CardsToDo/NewCards"]
margin_right = 220.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
custom_fonts/font = ExtResource( 2 )
text = "Nuevas:"
align = 1
valign = 1

[node name="Count" type="Label" parent="CardsToDo/NewCards"]
margin_top = 32.0
margin_right = 220.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 28 )
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "7"
align = 1
valign = 1

[node name="PendingCards" type="VBoxContainer" parent="CardsToDo"]
margin_left = 220.0
margin_right = 440.0
margin_bottom = 114.0
rect_min_size = Vector2( 220, 0 )

[node name="Title" type="Label" parent="CardsToDo/PendingCards"]
margin_right = 220.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
custom_fonts/font = ExtResource( 2 )
text = "Pendientes:"
align = 1
valign = 1

[node name="Count" type="Label" parent="CardsToDo/PendingCards"]
margin_top = 32.0
margin_right = 220.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 28 )
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "7"
align = 1
valign = 1

[node name="ButtonLayout" type="HBoxContainer" parent="."]
margin_top = 202.0
margin_right = 452.0
margin_bottom = 264.0
custom_constants/separation = 0

[node name="Space" type="Control" parent="ButtonLayout"]
margin_right = 92.0
margin_bottom = 62.0
rect_min_size = Vector2( 92, 0 )

[node name="EnterButton" parent="ButtonLayout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 360.0
margin_bottom = 62.0
